--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,15 @@
 name: jnigen_example
-description: A sample command-line application.
+description: A sample command-line application using jnigen.
 version: 1.0.0
-# repository: https://github.com/my_org/my_repo
 
 environment:
-  sdk: '>=2.18.0 <3.0.0'
+  sdk: ^3.3.0
 
-# dependencies:
-#   path: ^1.8.0
+dependencies:
+  jni: ^0.7.2
+  path: ^1.9.0
 
 dev_dependencies:
-  jnigen: ^0.2.0
-  lints: ^2.0.0
-  test: ^1.21.0
-dependencies:
-  jni: ^0.2.1
-  path: ^1.8.3
+  jnigen: ^0.7.0
+  lints: ^3.0.0
+  test: ^1.25.0
